# url-shortner

./: .gitignore  LICENSE  README.md  create-adr.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yaml  document-lint.yaml
.husky/: commit-msg  pre-commit
app/: main.py
app/features/get_redirect_url/: endpoint.py
app/features/shorten_url/: endpoint.py
config/: link_check_config.json  markdownlint_config.yaml
docs/: adr_readme.md
docs/adrs/: 0001-use-conventional-commits.md  0002-use-rest-over-grpc.md  0003-use-python-and-fast-api.md  0004-use-outside-in-tdd-with-integration-testing.md  0005-use-poetry-for-dependency-management.md
docs/c4/: container.puml  deployment.puml  system-context.puml
scripts/linting/: check_links.sh  check_links_script.sh  generate_summary.sh  generate_summary_script.sh  install_deps.sh  install_deps_script.sh  lint_markdown.sh  lint_markdown_script.sh  lint_plantuml.sh
