[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = "A production-ready URL shortener built with FastAPI"
authors = ["Codidharma - Mandar Dharmadhikari <codidharma@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]
python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
ruff = "^0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
